# serenity

./: .gitignore  CMakeLists.txt
AK/: Array.h  BinarySearch.h  BitStream.h  Bitmap.h  Buffered.h  BufferedStream.h  ByteBuffer.h  Chrono.cpp  Chrono.h  CircularDuplexStream.h  CircularQueue.h  Concepts.h  Debug.h  Debug.h.in  FixedArray.h  FlyString.h  Format.cpp  Format.h  FormatImplementation.cpp  FormatImplementation.h  Forward.h  GenericLexer.h  IPv4Address.h  InputBitStream.h  Iterator.h  LogStream.cpp  LogStream.h  MemoryStream.h  NetworkOrdered.h  NonnullOwnPtr.h  Optional.h  PrintfImplementation.h  RefPtr.h  SourceGenerator.h  Span.h  StdLibExtras.h  Stream.cpp  Stream.h  String.cpp  String.h  (+11 more)
AK/Tests/: CMakeLists.txt  TestBinarySearch.cpp  TestBitStream.cpp  TestBitmap.cpp  TestChrono.cpp  TestCircularDeque.cpp  TestCircularDuplexStream.cpp  TestCircularQueue.cpp  TestFixedArray.cpp  TestFormat.cpp  TestHashMap.cpp  TestInputBitStream.cpp  TestJSON.cpp  TestMemoryStream.cpp  TestNonnullRefPtr.cpp  TestPrintf.cpp  TestQueue.cpp  TestRefPtr.cpp  TestSourceGenerator.cpp  TestSpan.cpp  TestStream.cpp  TestString.cpp  TestStringUtils.cpp  TestStringView.cpp  TestTestSuite.cpp  TestTuple.cpp  TestTypedTransfer.cpp  TestVector.cpp
Applications/: CMakeLists.txt
Applications/Browser/: BrowserWindowUI.h  DownloadWidget.cpp  History.cpp  TabUI.h
Applications/DisplaySettings/: DisplaySettings.cpp
Applications/FileManager/: DirectoryView.cpp  FileUtils.cpp
Applications/IRCClient/: IRCClient.cpp
Applications/Piano/: TrackManager.cpp  TrackManager.h
Applications/Spreadsheet/: CondFormattingUI.h  CondFormattingViewUI.h  Spreadsheet.cpp
Applications/Wordy/: Document.h  (+10 more)
Applications/Writer/: .gitignore  CMakeLists.txt  EditEventHandler.cpp  EditEventHandler.h  Forward.h  InspectorWidget.cpp  InspectorWidget.h  InspectorWindow.json  InspectorWindowUI.h  Loader.cpp  Loader.h  MainWindow.json  MainWindowUI.h  Nodes.cpp  Nodes.h  WriterEventHandler.cpp  WriterEventHandler.h  WriterWidget.cpp  WriterWidget.gml  WriterWidget.h  WriterWidget.json  WriterWindow.gml  main.cpp
Applications/Writer/DOM/: Document.cpp  Document.h  Node.cpp  Node.h
Applications/Writer/Layout/: Block.h
Applications/Writer/Model/: DocumentNode.cpp  DocumentNode.h  FragmentNode.cpp  FragmentNode.h  HeadingNode.cpp  HeadingNode.h  Node.cpp  Node.h  ParagraphNode.cpp  ParagraphNode.h  Range.h  RootNode.cpp  RootNode.h
Kernel/: CMakeLists.txt  FutexQueue.cpp  KBufferBuilder.h  KResult.h  Lock.cpp  PhysicalAddress.h  Process.h  Random.h  Scheduler.cpp  SharedBuffer.h  StdLib.cpp  StdLib.h  Thread.cpp  Thread.h  ThreadBlockers.cpp  WaitQueue.cpp  init.cpp
Libraries/: CMakeLists.txt
Libraries/LibCompress/Tests/: CMakeLists.txt  TestCanonicalCode.cpp  TestDeflateStream.cpp
Meta/: dbgln-replace.py  grub-ebr.cfg  grub-gpt.cfg  grub-mbr.cfg
Meta/VisualStudioCode/: CMakeLists.txt  cmake-tools-kits.json  settings.json
Shell/: AST.cpp  Shell.cpp  main.cpp
Userland/: CMakeLists.txt  base64.cpp  benchmark.cpp  check.cpp  dummy.cpp  env.cpp  example.cpp  gunzip.cpp  profile.cpp  tar.cpp  test-compress.cpp  test-crypto.cpp  uncompress.cpp  which.cpp
(+302 files in other folders)
